--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             gap: 30px;
             font-size: 1.1em;
         }
-        
+        .blog::before { content: '🔗'; }
         .contact-item {
             display: flex;
             align-items: center;
@@ -465,6 +465,9 @@
                 <div class="contact-info">
                     <div class="contact-item phone">010-5009-0595</div>
                     <div class="contact-item email">sidml123@naver.com</div>
+                    <div class="contact-item blog">
+                       <a href="https://myit.tistory.com" target="_blank" rel="noopener">myit.tistory.com</a>
+                    </div>
                 </div>
             </div>
             <!-- 추가 -->
