--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         
         .phone::before { content: '📞'; }
         .email::before { content: '📧'; }
-        
+        .blog::before { content: '🔗'; }
+
         /* Summary Section */
         .summary {
             padding: 50px;
