--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                     <div class="contact-item phone">010-5009-0595</div>
                     <div class="contact-item email">sidml123@naver.com</div>
                     <div class="contact-item blog">
-                       <a href="https://myit.tistory.com" target="_blank" rel="noopener">myit.tistory.com</a>
+                       <a href="https://myit.tistory.com" target="_blank" rel="noopener">IT Blog</a>
                     </div>
                 </div>
             </div>
