--- a/index.html
+++ b/index.html
@@ -89,7 +89,15 @@
             background-size: contain;
             opacity: 0.8;
         }
-        
+        /* blog 하이퍼링크 색조절  */
+        .contact-item.blog a {
+            color: white;        /* 글자 색상 흰색 */
+            text-decoration: none; /* 밑줄 제거 (원하면) */
+        }
+
+        .contact-item.blog a:hover {
+            color: #ddd;         /* 마우스 올렸을 때 살짝 회색으로 */
+        }
         .phone::before { content: '📞'; }
         .email::before { content: '📧'; }
         .blog::before { content: '🔗'; }
