--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             color: #ddd;         /* 마우스 올렸을 때 살짝 회색으로 */
         }
         
-        
+
         .contact-item {
             display: flex;
             align-items: center;
@@ -477,7 +477,7 @@
                     <div class="contact-item phone">010-5009-0595</div>
                     <div class="contact-item email">sidml123@naver.com</div>
                     <div class="contact-item blog">
-                       <a href="https://myit.tistory.com" target="_blank" rel="noopener">IT Blog</a>
+                       <a href="https://myit.tistory.com" target="_blank" rel="noopener" style="color:white; text-decoration:none;">IT Blog</a>
                     </div>
                 </div>
             </div>
