--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 
             <script src="https://cdn.jsdelivr.net/npm/echarts@5"></script>
             <script>
-            (async function(){
+                (async function(){
                 const el = document.getElementById('srv-mini');
                 const c = echarts.init(el);
                 const badge = document.getElementById('srv-status');
@@ -511,49 +511,60 @@
                     animation:false
                 });
 
+                function toPct(v){ if(v==null||isNaN(v))return 0; return v<=1?Math.round(v*100):Math.round(v); }
                 function classify(v){
-                    // v: 0~100 (percent)
-                    // 기준: CPU<60 & MEM<70 & DISK<80 => OK
-                    // 어느 하나라도 Warn 구간 넘으면 WARN, Bad 구간 넘으면 BAD
-                    if (v.cpu < 60 && v.mem < 70 && v.disk < 80) return 'ok';
-                    if (v.cpu >= 85 || v.mem >= 90 || v.disk >= 95) return 'bad';
+                    if (v.cpu<60 && v.mem<70 && v.disk<80) return 'ok';
+                    if (v.cpu>=85 || v.mem>=90 || v.disk>=95) return 'bad';
                     return 'warn';
                 }
                 function renderBadge(v){
                     const cls = classify(v);
-                    const icon = cls==='ok'?'☀️':(cls==='warn'?'☁️':'🌧️');
-                    const text = cls==='ok'?'정상':(cls==='warn'?'주의':'위험');
+                    const icon = cls==='ok'?'☀️':cls==='warn'?'☁️':'🌧️';
+                    const text = cls==='ok'?'정상':cls==='warn'?'주의':'위험';
                     badge.className = 'status-badge ' + (cls==='ok'?'status-ok':cls==='warn'?'status-warn':'status-bad');
-                    badge.textContent = `${icon} ${text}  |  CPU ${v.cpu}% · MEM ${v.mem}% · DISK ${v.disk}%`;
+                    badge.textContent = `${icon} ${text} | CPU ${v.cpu}% · MEM ${v.mem}% · DISK ${v.disk}%`;
                 }
 
                 async function reload(){
                     try{
                     const raw = await fetch('data/health-log.jsonl?t='+Date.now(), {cache:'no-store'}).then(r=>r.text());
-                    const lines = raw.trim().split('\n').filter(Boolean).map(x=>JSON.parse(x));
+                    const lines = raw.trim() ? raw.trim().split('\n') : [];
 
-                    const keep = 120; // 최근 120 포인트만
-                    const arr = lines.slice(-keep);
-
-                    const labels = arr.map(d => new Date(d.ts).toLocaleTimeString('ko-KR',{timeZone:'Asia/Seoul'}));
-                    const cpu = arr.map(d => d.cpu||0), mem = arr.map(d => d.mem||0), disk = arr.map(d => d.disk||0);
-
-                    c.setOption({ xAxis:{data:labels}, series:[{data:cpu},{data:mem},{data:disk}] });
-
-                    // 최근 값(마지막 포인트) 기준 상태
-                    if (arr.length){
-                        const last = arr[arr.length-1];
-                        const snapshot = {
-                        cpu: Math.round(last.cpu||0),
-                        mem: Math.round(last.mem||0),
-                        disk: Math.round(last.disk||0)
-                        };
-                        renderBadge(snapshot);
+                    // 라인별 안전 파싱
+                    const parsed = [];
+                    for (const ln of lines){
+                        try { parsed.push(JSON.parse(ln)); } catch(_) { /* 깨진 라인 skip */ }
                     }
+                    if (!parsed.length){
+                        badge.className = 'status-badge';
+                        badge.textContent = '데이터 없음';
+                        return;
+                    }
+
+                    const keep = 120;
+                    const arr = parsed.slice(-keep);
+
+                    // ts가 없거나 깨진 경우도 방어
+                    const labels = arr.map(d => {
+                        const t = d.ts ? new Date(d.ts) : null;
+                        return (t && !isNaN(t)) ? t.toLocaleTimeString('ko-KR',{timeZone:'Asia/Seoul'}) : '';
+                    });
+
+                    const cpuArr  = arr.map(d => toPct(d.cpu  ?? d.cpu_pct  ?? d.cpuUsage  ?? d.cpu_percent));
+                    const memArr  = arr.map(d => toPct(d.mem  ?? d.mem_pct  ?? d.memory    ?? d.memory_percent));
+                    const diskArr = arr.map(d => toPct(d.disk ?? d.disk_pct ?? d.diskUsage ?? d.disk_percent));
+
+                    c.setOption({ xAxis:{data:labels}, series:[{data:cpuArr},{data:memArr},{data:diskArr}] });
+
+                    const last = {
+                        cpu:  cpuArr.length? cpuArr[cpuArr.length-1] : 0,
+                        mem:  memArr.length? memArr[memArr.length-1] : 0,
+                        disk: diskArr.length? diskArr[diskArr.length-1]: 0
+                    };
+                    renderBadge(last);
                     }catch(e){
-                    // 첫 배포 직후 파일 없을 수 있음
                     badge.className = 'status-badge';
-                    badge.textContent = '데이터 없음';
+                    badge.textContent = '데이터 로드 실패';
                     }
                 }
 
@@ -562,6 +573,7 @@
                 addEventListener('resize', ()=>c.resize());
                 })();
             </script>
+
         </header>
 
         <!-- Summary Section -->
