--- a/index.html
+++ b/index.html
@@ -455,18 +455,7 @@
             }
         }
         /* 추가 서버 상태 배지 08/28 */
-        .status-badge{
-        position:absolute; top:12px; right:320px; 
-        background: rgba(0,0,0,.25); color:#fff; 
-        padding:8px 12px; border-radius:10px; 
-        font-weight:700; backdrop-filter: blur(4px);
-        }
-        .status-ok{ background: rgba(16,185,129,.85); }   /* ☀️  */
-        .status-warn{ background: rgba(245,158,11,.85); } /* ☁️  */
-        .status-bad{ background: rgba(239,68,68,.85); }   /* 🌧️ */
-        @media (max-width:980px){
-        .status-badge{ position:static; display:inline-block; margin:8px 0 0 0; }
-        }
+        
         /* Server Status – card style */
         .server-status { padding: 50px; background: #f8fafc; }
         .status-card {
@@ -520,9 +509,9 @@
                 </div>
             </div>
             <!-- 추가 -->
-            <div id="srv-mini"></div>
+            <!-- <div id="srv-mini"></div> -->
             <!-- 추가 cpu 상태체크 08/28 -->
-            <div id="srv-status" class="status-badge">--</div> 
+            <!-- <div id="srv-status" class="status-badge">--</div>  -->
 
             <script src="https://cdn.jsdelivr.net/npm/echarts@5"></script>
             <script>
@@ -1039,7 +1028,7 @@
 
         <!-- Footer -->
         <footer style="background: #2d3748; color: white; text-align: center; padding: 30px; font-size: 0.9em;">
-            <p>© 2024 김현권 - System Engineer Portfolio</p>
+            <p>© 2025 김현권 - System Engineer Portfolio</p>
             <p style="margin-top: 10px; opacity: 0.7;">안정적이고 확장성 있는 IT 인프라를 구축하여 비즈니스 성장에 기여하겠습니다.</p>
         </footer>
     </div>
