--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>김현권 - 시스템엔지니어 경력기술서</title>
     <style>
         /* 추가 */
-        /* #srv-mini { position:absolute; top:30px; right:30px; width:300px; height:140px; z-index:3; }
-        @media (max-width: 980px){ #srv-mini { position:static; width:100%; height:180px; margin:10px 0; } } */
+        #srv-mini { position:absolute; top:30px; right:30px; width:300px; height:140px; z-index:3; }
+        @media (max-width: 980px){ #srv-mini { position:static; width:100%; height:180px; margin:10px 0; } }
 
         * {
             margin: 0;
@@ -454,43 +454,6 @@
                 grid-template-columns: 1fr;
             }
         }
-        /* 추가 서버 상태 배지 08/28 */
-        
-        /* Server Status – card style */
-        .server-status { padding: 50px; background: #f8fafc; }
-        .status-card {
-        background: white;
-        border-radius: 16px;
-        box-shadow: 0 10px 25px rgba(0,0,0,.08);
-        padding: 22px;
-        display: grid;
-        grid-template-columns: 1.8fr 1fr;
-        gap: 20px;
-        align-items: center;
-        }
-        @media (max-width: 980px){
-        .status-card { grid-template-columns: 1fr; }
-        }
-        .status-head {
-        display:flex; justify-content: space-between; align-items:center; margin-bottom: 12px;
-        }
-        .status-title { font-size:1.1rem; font-weight:700; color:#1e293b; }
-        .status-chip{
-        padding:6px 10px; border-radius:999px; font-weight:700; color:#fff; 
-        }
-        .chip-ok{ background:#10b981; } .chip-warn{ background:#f59e0b; } .chip-bad{ background:#ef4444; }
-
-        #srv-mini { width:100%; height:180px; } /* 그래프는 카드 안으로 이동 */
-
-        .meters { display:flex; flex-direction:column; gap:10px; }
-        .meter { display:grid; grid-template-columns: 58px 1fr 52px; gap:10px; align-items:center; }
-        .meter .label{ font-weight:700; color:#334155; }
-        .meter .bar{ height:10px; background:#edf2f7; border-radius:999px; overflow:hidden; }
-        .meter .fill{ height:100%; width:0%; border-radius:999px; transition: width .4s ease; 
-        background: linear-gradient(90deg,#667eea,#764ba2); }
-        .meter .val{ font-weight:700; color:#334155; text-align:right; }
-
-
     </style>
 </head>
 <body>
@@ -509,9 +472,9 @@
                 </div>
             </div>
             <!-- 추가 -->
-            <!-- <div id="srv-mini"></div> -->
+            <div id="srv-mini"></div>
             <!-- 추가 cpu 상태체크 08/28 -->
-            <!-- <div id="srv-status" class="status-badge">--</div>  -->
+            <div id="srv-status" class="status-badge">--</div> 
 
             <script src="https://cdn.jsdelivr.net/npm/echarts@5"></script>
             <script>
