--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
             <div id="srv-status" class="status-badge">--</div> 
 
             <script src="https://cdn.jsdelivr.net/npm/echarts@5"></script>
-            <!-- <script>
+            <script>
                 (async function(){
                 const el = document.getElementById('srv-mini');
                 const c = echarts.init(el);
@@ -572,7 +572,7 @@
                 setInterval(reload, 30000);
                 addEventListener('resize', ()=>c.resize());
                 })();
-            </script> -->
+            </script>
 
         </header>
 
