--- a/index.html
+++ b/index.html
@@ -455,19 +455,79 @@
             }
         }
         /* 추가 서버 상태 배지 08/28 */
-        .status-badge{
-        position:absolute; top:12px; right:320px; 
-        background: rgba(0,0,0,.25); color:#fff; 
-        padding:8px 12px; border-radius:10px; 
-        font-weight:700; backdrop-filter: blur(4px);
-        }
-        .status-ok{ background: rgba(16,185,129,.85); }   /* ☀️  */
-        .status-warn{ background: rgba(245,158,11,.85); } /* ☁️  */
-        .status-bad{ background: rgba(239,68,68,.85); }   /* 🌧️ */
-        @media (max-width:980px){
-        .status-badge{ position:static; display:inline-block; margin:8px 0 0 0; }
+        /* 기존 #srv-mini 스타일을 이걸로 교체하세요 */
+        #srv-mini { 
+            position: absolute; 
+            top: 25px; 
+            right: 25px; 
+            width: 280px; 
+            height: 120px; 
+            z-index: 3;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(8px);
+            border-radius: 12px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            padding: 10px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         }
 
+        /* 기존 .status-badge 스타일을 이걸로 교체하세요 */
+        .status-badge {
+            position: absolute; 
+            top: 20px; 
+            right: 320px; 
+            background: rgba(255, 255, 255, 0.12);
+            color: #fff; 
+            padding: 8px 14px; 
+            border-radius: 20px; 
+            font-weight: 600;
+            backdrop-filter: blur(8px);
+            border: 1px solid rgba(255, 255, 255, 0.15);
+            font-size: 0.8em;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+        }
+
+        .status-ok { 
+            background: linear-gradient(135deg, rgba(16,185,129,0.7), rgba(5,150,105,0.7)); 
+            border-color: rgba(16,185,129,0.25);
+        }
+
+        .status-warn { 
+            background: linear-gradient(135deg, rgba(245,158,11,0.7), rgba(217,119,6,0.7)); 
+            border-color: rgba(245,158,11,0.25);
+        }
+
+        .status-bad { 
+            background: linear-gradient(135deg, rgba(239,68,68,0.7), rgba(220,38,38,0.7)); 
+            border-color: rgba(239,68,68,0.25);
+        }
+
+        @media (max-width: 980px){
+            #srv-mini { 
+                position: static; 
+                width: 100%; 
+                height: 140px; 
+                margin: 12px 0; 
+                background: rgba(255, 255, 255, 0.12);
+            }
+            
+            .status-badge { 
+                position: static; 
+                display: inline-block; 
+                margin: 8px 0 0 0; 
+                width: fit-content;
+            }
+        }
+
+        /* 차트 제목 스타일 추가 */
+        .chart-mini-title {
+            color: rgba(255, 255, 255, 0.8);
+            font-size: 0.75em;
+            font-weight: 500;
+            margin-bottom: 3px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -486,7 +546,10 @@
                 </div>
             </div>
             <!-- 추가 -->
-            <div id="srv-mini"></div>
+            <!-- <div id="srv-mini"></div>-->
+            <div id="srv-mini">
+                <div class="chart-mini-title">Server Monitor</div>
+            </div>
             <!-- 추가 cpu 상태체크 08/28 -->
             <div id="srv-status" class="status-badge">--</div> 
 
@@ -498,17 +561,65 @@
                 const badge = document.getElementById('srv-status');
 
                 c.setOption({
-                    grid:{left:30,right:8,top:18,bottom:20,containLabel:true},
-                    tooltip:{trigger:'axis'},
-                    legend:{data:['CPU','MEM','DISK']},
-                    xAxis:{type:'category',data:[]},
-                    yAxis:{type:'value',min:0,max:100},
-                    series:[
-                    {name:'CPU', type:'line', symbol:'none', areaStyle:{opacity:.28}, data:[]},
-                    {name:'MEM', type:'line', symbol:'none', areaStyle:{opacity:.22}, data:[]},
-                    {name:'DISK',type:'line', symbol:'none', areaStyle:{opacity:.22}, data:[]}
+                    backgroundColor: 'transparent',
+                    grid: { left: 25, right: 10, top: 20, bottom: 20, containLabel: true },
+                    tooltip: { 
+                        trigger: 'axis',
+                        backgroundColor: 'rgba(0, 0, 0, 0.75)',
+                        borderColor: 'rgba(255, 255, 255, 0.2)',
+                        textStyle: { color: '#fff', fontSize: 11 }
+                    },
+                    legend: { 
+                        data: ['CPU', 'MEM', 'DISK'],
+                        textStyle: { color: 'rgba(255, 255, 255, 0.8)', fontSize: 9 },
+                        top: 2,
+                        itemWidth: 12,
+                        itemHeight: 8
+                    },
+                    xAxis: { 
+                        type: 'category', 
+                        data: [],
+                        axisLabel: { show: false },
+                        axisLine: { show: false },
+                        axisTick: { show: false },
+                        splitLine: { show: false }
+                    },
+                    yAxis: { 
+                        type: 'value', 
+                        min: 0, 
+                        max: 100,
+                        axisLabel: { color: 'rgba(255, 255, 255, 0.6)', fontSize: 9 },
+                        axisLine: { show: false },
+                        axisTick: { show: false },
+                        splitLine: { lineStyle: { color: 'rgba(255, 255, 255, 0.08)' } }
+                    },
+                    series: [
+                        { 
+                            name: 'CPU', 
+                            type: 'line', 
+                            symbol: 'none', 
+                            lineStyle: { width: 1.5, color: '#10b981' },
+                            areaStyle: { opacity: 0.25, color: 'rgba(16, 185, 129, 0.25)' }, 
+                            data: [] 
+                        },
+                        { 
+                            name: 'MEM', 
+                            type: 'line', 
+                            symbol: 'none', 
+                            lineStyle: { width: 1.5, color: '#3b82f6' },
+                            areaStyle: { opacity: 0.2, color: 'rgba(59, 130, 246, 0.2)' }, 
+                            data: [] 
+                        },
+                        { 
+                            name: 'DISK', 
+                            type: 'line', 
+                            symbol: 'none', 
+                            lineStyle: { width: 1.5, color: '#f59e0b' },
+                            areaStyle: { opacity: 0.15, color: 'rgba(245, 158, 11, 0.15)' }, 
+                            data: [] 
+                        }
                     ],
-                    animation:false
+                    animation: false
                 });
 
                 function toPct(v){ if(v==null||isNaN(v))return 0; return v<=1?Math.round(v*100):Math.round(v); }
@@ -519,12 +630,11 @@
                 }
                 function renderBadge(v){
                     const cls = classify(v);
-                    const icon = cls==='ok'?'☀️':cls==='warn'?'☁️':'🌧️';
+                    const icon = cls==='ok'?'●':cls==='warn'?'⚠':'●';
                     const text = cls==='ok'?'정상':cls==='warn'?'주의':'위험';
                     badge.className = 'status-badge ' + (cls==='ok'?'status-ok':cls==='warn'?'status-warn':'status-bad');
-                    badge.textContent = `${icon} ${text} | CPU ${v.cpu}% · MEM ${v.mem}% · DISK ${v.disk}%`;
+                    badge.textContent = `${icon} ${text} CPU${v.cpu}% MEM${v.mem}% DISK${v.disk}%`;
                 }
-
                 async function reload(){
                     try{
                     const raw = await fetch('data/health-log.jsonl?t='+Date.now(), {cache:'no-store'}).then(r=>r.text());
@@ -894,7 +1004,7 @@
 
         <!-- Footer -->
         <footer style="background: #2d3748; color: white; text-align: center; padding: 30px; font-size: 0.9em;">
-            <p>© 2024 김현권 - System Engineer Portfolio</p>
+            <p>© 2025 김현권 - System Engineer Portfolio</p>
             <p style="margin-top: 10px; opacity: 0.7;">안정적이고 확장성 있는 IT 인프라를 구축하여 비즈니스 성장에 기여하겠습니다.</p>
         </footer>
     </div>
