--- a/index.html
+++ b/index.html
@@ -455,21 +455,22 @@
             }
         }
         /* 추가 서버 상태 배지 08/28 */
-        /* 기존 #srv-mini 스타일을 이걸로 교체하세요 */
+        
         #srv-mini { 
             position: absolute; 
-            top: 25px; 
-            right: 25px; 
-            width: 280px; 
-            height: 120px; 
+            top: 80px;  /* 이름 아래쪽에 위치 */
+            right: 50px; 
+            width: 250px; 
+            height: 110px; 
             z-index: 3;
             background: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(8px);
             border-radius: 12px;
             border: 1px solid rgba(255, 255, 255, 0.2);
-            padding: 10px;
+            padding: 8px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         }
+
 
         /* 기존 .status-badge 스타일을 이걸로 교체하세요 */
         .status-badge {
@@ -486,6 +487,24 @@
             font-size: 0.8em;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
+        }
+
+        /* 기존 .status-badge 스타일을 이걸로 교체하세요 */
+        .status-badge {
+            position: absolute; 
+            top: 60px;  /* 이름 오른쪽, 차트보다 위에 */
+            right: 50px; 
+            background: rgba(255, 255, 255, 0.12);
+            color: #fff; 
+            padding: 6px 12px; 
+            border-radius: 18px; 
+            font-weight: 600;
+            backdrop-filter: blur(8px);
+            border: 1px solid rgba(255, 255, 255, 0.15);
+            font-size: 0.75em;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+            white-space: nowrap; /* 텍스트가 한 줄로 유지되도록 */
         }
 
         .status-ok { 
@@ -507,26 +526,40 @@
             #srv-mini { 
                 position: static; 
                 width: 100%; 
-                height: 140px; 
-                margin: 12px 0; 
+                height: 130px; 
+                margin: 15px 0 0 0; 
                 background: rgba(255, 255, 255, 0.12);
             }
             
             .status-badge { 
                 position: static; 
                 display: inline-block; 
-                margin: 8px 0 0 0; 
+                margin: 0 0 10px 0; 
                 width: fit-content;
             }
         }
 
-        /* 차트 제목 스타일 추가 */
+
+        /* 차트 제목 스타일 */
         .chart-mini-title {
             color: rgba(255, 255, 255, 0.8);
-            font-size: 0.75em;
+            font-size: 0.7em;
             font-weight: 500;
-            margin-bottom: 3px;
+            margin-bottom: 2px;
             text-align: center;
+        }
+
+        /* 헤더 컨텐츠가 차트와 겹치지 않도록 조정 */
+        .header-content {
+            position: relative;
+            z-index: 2;
+            max-width: calc(100% - 320px); /* 차트 공간 확보 */
+        }
+
+        @media (max-width: 980px) {
+            .header-content {
+                max-width: 100%;
+            }
         }
     </style>
 </head>
