--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
         /* 추가 */
         #srv-mini { position:absolute; top:30px; right:30px; width:300px; height:140px; z-index:3; }
-        @media (max-width: 980px){ #srv-mini { position:static; width:100%; height:180px; margin:10px 0; } }
-
+        /* @media (max-width: 980px){ #srv-mini { position:static; width:100%; height:180px; margin:10px 0; } } */
+        @media (max-width: 1500px){ #srv-mini { position:static; width:100%; height:350px; margin:10px 0; } }
         * {
             margin: 0;
             padding: 0;
