--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>김현권 - 시스템엔지니어 경력기술서</title>
     <style>
-        
+        #srv-mini { position:absolute; top:80px; right:50px; width:250px; height:110px; z-index:3; }
+        @media (max-width: 980px){ #srv-mini { position:static; width:100%; height:130px; margin:15px 0 0 0; } }
+
         * {
             margin: 0;
             padding: 0;
