--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             bottom: 0;
             background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grid" width="10" height="10" patternUnits="userSpaceOnUse"><path d="M 10 0 L 0 0 0 10" fill="none" stroke="rgba(255,255,255,0.1)" stroke-width="0.5"/></pattern></defs><rect width="100" height="100" fill="url(%23grid)"/></svg>');
             opacity: 0.3;
+              /* 우선순위 */
+            z-index: 1;
+            pointer-events: none;  
         }
         
         .header-content {
@@ -488,6 +491,8 @@
             transition: all 0.3s ease;
             white-space: nowrap; /* 텍스트가 한 줄로 유지되도록 */
             cursor: pointer;   
+            /* 우선순위 */
+            z-index: 4;
         }
         
         /* 호버 시 살짝 튀어 오르기 (선택) */
@@ -591,6 +596,8 @@
             transition: all 0.3s ease;
             white-space: nowrap;
             cursor: pointer;     /* 클릭 가능 표시 */
+            /* 우선 순위 */
+            z-index: 4;
             }
             .status-badge:hover {
             transform: translateY(-1px);
