--- a/index.html
+++ b/index.html
@@ -472,7 +472,10 @@
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             cursor: pointer;
         }
-
+        #srv-mini:hover {
+        transform: translateY(-1px);
+        box-shadow: 0 4px 16px rgba(0,0,0,0.15);
+        }
 
         /* 기존 .status-badge 스타일을 이걸로 교체하세요 */
         .status-badge {
