--- a/index.html
+++ b/index.html
@@ -471,6 +471,10 @@
             padding: 8px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             cursor: pointer;
+            /* 추가 */
+            transition: transform .2s ease, box-shadow .2s ease;
+            will-change: transform, box-shadow;
+            
         }
         #srv-mini:hover {
         transform: translateY(-1px);
