--- a/index.html
+++ b/index.html
@@ -474,6 +474,8 @@
             /* 추가 */
             transition: transform .2s ease, box-shadow .2s ease;
             will-change: transform, box-shadow;
+
+            z-index: 2;
             
         }
         #srv-mini:hover {
