--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
         #srv-mini { position:absolute; top:80px; right:50px; width:250px; height:110px; z-index:3; }
         @media (max-width: 980px){ #srv-mini { position:static; width:100%; height:130px; margin:15px 0 0 0; } }
 
+        /* 차트 위에 마우스가 있을 때 배지를 잠시 비활성화 */
+        .status-badge.dim {
+        opacity: .45;            /* 살짝 비쳐 보이게 */
+        pointer-events: none;    /* 차트 툴팁/호버 막지 않게 */
+        transition: opacity .15s ease;
+        }
+
+        /* (백업) ECharts 툴팁은 항상 최상단으로 */
+        #srv-mini .echarts-tooltip,
+        .echarts-tooltip { 
+        z-index: 2147483647 !important;
+        pointer-events: none;
+        }
         * {
             margin: 0;
             padding: 0;
@@ -670,7 +683,16 @@
             const el    = document.getElementById('srv-mini');
             const badge = document.getElementById('srv-status');
             const c     = echarts.init(el);
+            const srvMini = document.getElementById('srv-mini');
 
+            // 차트 위에 올리면 배지를 잠시 투명 + 클릭 비활성
+            srvMini.addEventListener('mouseenter', () => badge.classList.add('dim'));
+            srvMini.addEventListener('mouseleave', () => badge.classList.remove('dim'));
+
+            // 모바일 터치 대응
+            srvMini.addEventListener('touchstart', () => badge.classList.add('dim'), {passive:true});
+            srvMini.addEventListener('touchend',   () => badge.classList.remove('dim'));
+   
             /* === 1) 대시보드 링크: 초기화 시 1회만 등록 === */
             const TARGET_URL = 'http://3.219.205.4:7070/health/dashboard';
             function openDashboard() {
