--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
 
         <div id="srv-mini">
             <div class="chart-mini-title">Server Monitor</div>
-            <span class="detail-button" onclick="window.open('https://hkk-it.kro.kr/health/dashboard', '_blank')">상세보기</span>
+            <span class="detail-button" onclick="openDashboard()" aria-label="상세확인">&lt;"상세확인"&gt;</span>
         </div>
         <div id="srv-status" class="status-badge">--</div>
 
