--- a/index.html
+++ b/index.html
@@ -702,15 +702,19 @@
         </div>
 
         <div id="srv-mini">
-            <div class="chart-mini-title">Server Monitor</div>
-            <span class="detail-button" onclick="openDashboard()" aria-label="상세확인">&lt;"상세확인"&gt;</span>
+            <div id="srv-mini-chart" aria-hidden="true"></div>
+            <span class="detail-button"
+                    onclick="window.open('https://hkk-it.kro.kr/health/dashboard','_blank','noopener,noreferrer')"
+                    aria-label="상세확인">&lt;상세확인&gt;</span>
         </div>
+
         <div id="srv-status" class="status-badge">--</div>
 
         <script src="https://cdn.jsdelivr.net/npm/echarts@5"></script>
         <script>
             (async function () {
-            const el    = document.getElementById('srv-mini');
+            // const el    = document.getElementById('srv-mini');
+            const el    = document.getElementById('srv-mini-chart');   
             const badge = document.getElementById('srv-status');
             const c     = echarts.init(el);
             const srvMini = document.getElementById('srv-mini');
